Fix broken css and alter last three div

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body
+body {
   font-size: 14px;
 }
 
@@ -8,7 +8,7 @@ nav {
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
@@ -16,21 +16,27 @@ section {
 }
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
 }
 
 .example, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center
 }
 
 h3 {
   font-size: 1.3em;
 }
 
-.element {
+.element, .element2 {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
+}
+/*** alter the background-color of the last three div ***/
+
+.element2 {
+  background-color: pink;
+}
